# bayesian_retrosynthesis

./: .gitignore  Dockerfile  README.md  README_DOCKER.md  bayesian_retrosynthesis.py  demo.py  docker-compose.yml  evaluation.py  molecular_transformer.py  pyproject.toml  requirements.txt  simulation_bayesian_retrosynthesis.ipynb
